[gd_scene load_steps=11 format=2]

[ext_resource path="res://Events/Forge.gd" type="Script" id=1]
[ext_resource path="res://UI/Shapes/question.png" type="Texture" id=2]
[ext_resource path="res://UI/Shapes/squareglow.png" type="Texture" id=3]
[ext_resource path="res://UI/Shapes/squareshadow.png" type="Texture" id=4]
[ext_resource path="res://TIMESS__.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Modifiers/mod_Burn.png" type="Texture" id=6]
[ext_resource path="res://Map/whitesquare.png" type="Texture" id=7]
[ext_resource path="res://UI/Buttons/button_Forge.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 37 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="leave" type="Node2D" parent="."]
position = Vector2( 958, 818 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="leave"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -73.0
margin_top = -52.0
margin_right = 507.0
margin_bottom = 398.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="leave"]
margin_left = -62.0
margin_top = -39.0
margin_right = 248.0
margin_bottom = 174.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
patch_margin_left = 103
patch_margin_top = 102
patch_margin_right = 103
patch_margin_bottom = 104
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="leave"]
margin_left = -56.0
margin_top = -32.0
margin_right = 25.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Leave"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonLeave" type="TextureButton" parent="leave"]
margin_left = -66.0
margin_top = -43.0
margin_right = 34.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="leave"]
visible = false
modulate = Color( 0.760784, 0.694118, 0.556863, 0.235294 )
margin_left = -78.0
margin_top = -51.0
margin_right = 1162.0
margin_bottom = 859.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moveAreaLeave" type="Area2D" parent="leave"]
visible = false

[node name="moveCollision" type="CollisionShape2D" parent="leave/moveAreaLeave"]
position = Vector2( -16, -6 )
shape = SubResource( 2 )

[node name="forge" type="Node2D" parent="."]
position = Vector2( 557, 797 )
z_index = 1
z_as_relative = false
__meta__ = {
"_edit_group_": true
}

[node name="back" type="Node2D" parent="forge"]
visible = false
position = Vector2( -191.375, -23.875 )

[node name="whitesquare" type="Sprite" parent="forge/back"]
modulate = Color( 0.286275, 0.282353, 0.282353, 1 )
position = Vector2( 24.5, -21.125 )
scale = Vector2( 0.171, 0.096 )
texture = ExtResource( 7 )

[node name="whitesquare2" type="Sprite" parent="forge/back"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( -37, -22 )
scale = Vector2( 0.0325, 0.0325 )
texture = ExtResource( 7 )

[node name="whitesquare3" type="Sprite" parent="forge/back"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( 11.5, -47.125 )
scale = Vector2( 0.03175, 0.03175 )
texture = ExtResource( 7 )

[node name="whitesquare4" type="Sprite" parent="forge/back"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( 11.5, 3.875 )
scale = Vector2( 0.03175, 0.03175 )
texture = ExtResource( 7 )

[node name="mod1" type="Sprite" parent="forge"]
visible = false
position = Vector2( -228.188, -46.0625 )
scale = Vector2( 0.132083, 0.132083 )
texture = ExtResource( 6 )

[node name="mod2" type="Sprite" parent="forge"]
visible = false
position = Vector2( -179.875, -70.875 )
scale = Vector2( 0.134167, 0.134167 )
texture = ExtResource( 6 )

[node name="mod3" type="Sprite" parent="forge"]
visible = false
position = Vector2( -179.875, -19.875 )
scale = Vector2( 0.134167, 0.134167 )
texture = ExtResource( 6 )

[node name="button_Forge" type="Sprite" parent="forge"]
position = Vector2( -45, -45 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="buttonBag" type="TextureButton" parent="forge"]
margin_left = -145.0
margin_top = -145.0
margin_right = 56.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mods" type="Node2D" parent="."]
visible = false
position = Vector2( -151, 396 )
__meta__ = {
"_edit_group_": true
}
[connection signal="pressed" from="leave/buttonLeave" to="." method="_on_buttonLeave_pressed"]
[connection signal="area_entered" from="leave/moveAreaLeave" to="." method="_on_moveAreaLeave_area_entered"]
[connection signal="area_exited" from="leave/moveAreaLeave" to="." method="_on_moveAreaLeave_area_exited"]
[connection signal="button_down" from="forge/buttonBag" to="." method="_on_buttonBag_button_down"]
[connection signal="button_up" from="forge/buttonBag" to="." method="_on_buttonBag_button_up"]
[connection signal="pressed" from="forge/buttonBag" to="." method="_on_buttonBag_pressed"]
